--- a/app/global.css
+++ b/app/global.css
@@ -100,6 +100,17 @@ input:focus {
   text-align: left;
 }
 
+.bubble.user {
+  border-radius: 20px 20px 0 20px;
+  background-color: #e1f4ffff;
+  margin-left: auto;
+}
+
+.bubble.assistant {
+  border-radius: 20px 20px 20px 0;
+  background-color: #dce7ffff;
+}
+
 .loader-bubble {
   display: flex;
   justify-content: space-between;
